# uav_learn

./: README.md
learn_ros/devel/: .catkin  .rosinstall  setup.sh
learn_ros/devel/lib/helloworld/: helloworld
learn_ros/devel/lib/learn_param/: rosrun_param
learn_ros/devel/lib/mavros_offboard/: get_rc_att  kd  offboard  publish_att  publish_att_RC  publish_att_auto_bad
learn_ros/devel/lib/offboard/: offb_cfx  offb_node  offb_zfx
learn_ros/devel/lib/pkgconfig/: helloworld.pc  learn_eval.pc  learn_param.pc  mavros_offboard.pc  offboard.pc  track_demo.pc
learn_ros/devel/lib/track_demo/: auto_control  auto_control_offboard  backhome  circle  circle_head  circle_points  circle_points_headfollow_key  circle_points_headin_key  circle_points_headout_key  circle_points_key  circle_withkey  control  eight_points_head_key  eight_points_key  figure_eight  figure_eight_head  hw  key_helloworld  move_control  move_control_con  move_slow  state  takeoff  takeoff_inplace  teleop_twist_keyboard  tf  trajectory  trajectory_realtime  trajectory_time
learn_ros/devel/share/helloworld/cmake/: helloworldConfig.cmake
learn_ros/devel/share/learn_eval/cmake/: learn_evalConfig.cmake
learn_ros/devel/share/learn_param/cmake/: learn_paramConfig.cmake
learn_ros/devel/share/mavros_offboard/cmake/: mavros_offboardConfig.cmake
learn_ros/devel/share/offboard/cmake/: offboardConfig.cmake
learn_ros/devel/share/track_demo/cmake/: track_demoConfig.cmake
learn_ros/src/helloworld/: CMakeLists.txt
learn_ros/src/helloworld/src/: helloworld.cpp
learn_ros/src/learn_param/: CMakeLists.txt
learn_ros/src/learn_param/launch/: roslaunch_param.launch  roslaunch_param_arg.launch
learn_ros/src/learn_param/src/: rosrun_param.cpp
learn_ros/src/mavros_offboard/: CMakeLists.txt  package.xml
learn_ros/src/mavros_offboard/src/: kd.cpp  publish_att.cpp
learn_ros/src/offboard/: CMakeLists.txt
learn_ros/src/offboard/scripts/: 11.py  helloworld.py  takeoff.py
learn_ros/src/offboard/src/: offb_cfx.cpp  offb_node.cpp  offb_zfx.cpp
learn_ros/src/track_demo/: CMakeLists copy.txt  CMakeLists.txt
learn_ros/src/track_demo/config/rviz/: tb3.rviz
learn_ros/src/track_demo/include/track_demo/: KeyboardEvent.h
learn_ros/src/track_demo/launch/: mavros.launch
learn_ros/src/track_demo/scripts/: teleop_twist_keyboard.py
learn_ros/src/track_demo/src/: auto_control copy 2.cpp  auto_control copy.cpp  auto_control_bak.cpp  auto_control_offboard.cpp  backhome.cpp  circle.cpp  circle_head.cpp  circle_points.cpp  circle_points_headfollow_key.cpp  circle_points_headin_key.cpp  circle_points_headout_key.cpp  circle_points_key.cpp  circle_withkey.cpp  control.cpp  eight_points_head_key.cpp  eight_points_key.cpp  figure_eight.cpp  figure_eight_head.cpp  hw.cpp  key_helloworld.cpp  move_control.cpp  move_control_con.cpp  move_slow.cpp  px4_velocity_control_node.cpp  state.cpp  takeoff.cpp  takeoff_inplace.cpp  teleop_twist_keyboard copy.cpp  teleop_twist_keyboard.cpp  temp.cpp  tf.cpp  trajectory.cpp  trajectory_realtime.cpp  trajectory_time.cpp  yaw.cpp
learn_ros/src/track_demo/src/lib/: KeyboardEvent.cpp
